# predictive-maintenance-system

./: .gitignore  Dockerfile  Dockerfile.streamlit  README.md  pyproject.toml
configs/: config.yaml
data/processed/: processed.csv
pipelines/: train_pipeline.py
scripts/: download_data.py
src/api/: app.py  schemas.py
src/app/: streamlit_app.py
src/data/: preprocess.py
src/evaluation/: evaluate.py
src/features/: engineering.py
src/models/: train.py
tests/: test_api.py
